<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/question_view_container"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.nathan.surveyapp.ConfigureActivity"
>

    <EditText
        android:id="@+id/new_question"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:autofillHints=""
        android:hint="@string/instructions"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_question_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/yes_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="3dp"
        android:layout_weight=".5"
        android:hint="@string/answer_1"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/no_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_question" />

    <EditText
        android:id="@+id/no_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:layout_weight=".5"
        android:hint="@string/answer_2"
        android:padding="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_answer"
        app:layout_constraintTop_toBottomOf="@+id/add_question_button" />

</androidx.constraintlayout.widget.ConstraintLayout>